fix(CI): skipValidateSpec since parent tags are not supported (#13)

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
               </additionalProperties>
               <output>${project.basedir}/sdk</output>
               <templateDirectory>generator</templateDirectory>
+              <skipValidateSpec>true</skipValidateSpec>
             </configuration>
           </execution>
         </executions>
